Fix heat/lane not showing on public results DQ/Pen card

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -4780,10 +4780,6 @@ aside.open {
   .\33xl\:grid-cols-5 {
     grid-template-columns: repeat(5, minmax(0, 1fr));
   }
-
-  .\33xl\:grid-cols-6 {
-    grid-template-columns: repeat(6, minmax(0, 1fr));
-  }
 }
 
 @media (min-width: 1920px) {
